--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -9,6 +9,17 @@ Opa {{name}} {{lastName}}, tudo bem?
 {{/showOld}}
 
 <hr/>
+
+<fieldset>
+    <legend>Novo Usuário</legend>
+    <form method="POST" action="/novousuario">
+        <input type="text" name="name" placeholder="Digite um nome" /><br/><br/>
+        <input type="text" name="age" placeholder="Digite uma idade" /><br/><br/>
+        <input type="submit" value="Inserir usuário" />
+    </form>
+</fieldset>
+
+<hr/>
 <h2>Usuários do banco</h2>
 
 <ul>
