Alterações nos usuários da lista

--- a/src/views/pages/home.mustache
+++ b/src/views/pages/home.mustache
@@ -24,7 +24,12 @@ Opa {{name}} {{lastName}}, tudo bem?
 
 <ul>
     {{#users}}
-        <li> {{name}} - Idade: {{age}} </li>
+        <li style="display: flex;"> 
+            {{name}} - Idade: {{age}}
+            <form method="POST" action="/add-age/{{id}}"><input type="submit" value="+"/></form>
+            <form method="POST" action="/remove-age/{{id}}"><input type="submit" value="-"/></form>
+            <form method="POST" action="/delete/{{id}}"><input type="submit" value="Excluir"/></form>
+        </li>
     {{/users}}
 </ul>
 
